# aipisarz_2

./: Dockerfile  README.md  pyproject.toml
app/: main.py
app/ai/: assistants.py  models.py  utils.py
app/api/: deps.py  main.py
app/api/routes/: ai.py
temp/: Dockerfile_3.11
